countdowntopregnancy.com (archived on 2009-06-11)
{
  "alexa_rank": 772072,
  "analysis_subcorpus": true,
  "categories": "education;health",
  "char_count": 1483,
  "classifier_probability": 0.89,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 15.03,
  "homepage_snapshot_redirected_domain": "countdowntopregnancy.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090322024740id_/http://www.countdowntopregnancy.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090322024740id_/http%3A//countdowntopregnancy.com",
  "interval": "2009_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "countdowntopregnancy.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090611092346id_/http%3A//www.countdowntopregnancy.com/support/privacypolicy.php",
  "policy_title": "Privacy Policy | Countdown to Pregnancy",
  "policy_url": "countdowntopregnancy.com/support/privacypolicy.php",
  "sha1": "f2b1fb73cbcb0a2af577fa8caf2991304dbac6e5",
  "simhash": 13760413097081872303,
  "simhash_updated": true,
  "site_hostname": "countdowntopregnancy.com",
  "site_url": "http://countdowntopregnancy.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20090611092346",
  "word_count": 245,
  "year": 2009
}

--- a/c/co/cou/countdowntopregnancy.com.html
+++ b/c/co/cou/countdowntopregnancy.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the countdowntopregnancy.com privacy policy that was archived on 2008-12-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081219162033id_/http%3A//www.countdowntopregnancy.com/support/privacypolicy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the countdowntopregnancy.com privacy policy that was archived on 2009-06-11.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090611092346id_/http%3A//www.countdowntopregnancy.com/support/privacypolicy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 	<title>Privacy Policy | Countdown to Pregnancy</title>
@@ -53,12 +53,13 @@
 	<td class="nav" colspan="2" style="padding: 0px;">
 		<table class="nav" width="100%" cellpadding="0" cellspacing="0">
 		<tbody><tr>
-			<td class="nav" align="center" width="23%" style="border-right: 1px solid #FFFFFF;padding:0px;"><a href="/earlypregnancysymptoms/">Early Pregnancy Symptoms</a></td>
-			<td class="nav" align="center" width="19%" style="border-right: 1px solid #FFFFFF;padding:0px;"><a href="/pregnancytest/">Pregnancy Test Stats</a></td>
-			<td class="nav" align="center" width="13%" style="border-right: 1px solid #FFFFFF;padding:0px;"><a href="/fertilityaids/">Fertility Aids</a></td>
-			<td class="nav" align="center" width="17%" style="border-right: 1px solid #FFFFFF;padding:0px;"><a href="/resources/">Tools &amp; Resources</a></td>
+			<td class="nav" align="center" width="22%" style="border-right: 1px solid #FFFFFF;padding:0px;"><a href="/earlypregnancysymptoms/">Early Pregnancy Symptoms</a></td>
+			<td class="nav" align="center" width="18" style="border-right: 1px solid #FFFFFF;padding:0px;"><a href="/pregnancytest/">Pregnancy Test Stats</a></td>
+			<td class="nav" align="center" width="12%" style="border-right: 1px solid #FFFFFF;padding:0px;"><a href="/fertilityaids/">Fertility Aids</a></td>
+			<td class="nav" align="center" width="16%" style="border-right: 1px solid #FFFFFF;padding:0px;"><a href="/resources/">Tools &amp; Resources</a></td>
+			<td class="nav" align="center" width="8%" style="border-right: 1px solid #FFFFFF;padding:0px;"><a href="/video/">Videos</a></td>
 			<td class="nav" align="center" width="11%" style="border-right: 1px solid #FFFFFF;padding:0px;"><a href="/community/">Community</a></td>
-			<td class="nav" align="center" width="17%" style="padding:0px;"><a href="/success/">TTC Success Stories</a></td>
+			<td class="nav" align="center" width="13%" style="padding:0px;"><a href="/success/">Success Stories</a></td>
 		</tr>
 		</tbody></table>
 	</td>
@@ -97,11 +98,18 @@ Only information you select to have displayed (using your My Account or My Homep
 		<a href="http://www.addthis.com/bookmark.php" onmouseover="return addthis_open(this, '', '[URL]', '[TITLE]')" onmouseout="addthis_close()" onclick="return addthis_sendto()"><img src="http://s9.addthis.com/button1-bm.gif" width="125" height="16" border="0" alt=""></a><script type="text/javascript" src="http://s7.addthis.com/js/152/addthis_widget.js"></script>
 		<!-- AddThis Button END -->
 				<br><br>
-							<a href="/myaccount/createaccount.php"><img src="/res/img/rbi/userhomepage_join.gif" title="Create a FREE Account and Start Tracking Your Symptoms!" alt="Create a FREE Account and Start Tracking Your Symptoms!" border="0"></a><br><br>
-				<a href="http://www.cafepress.com/CTPregnancy" target="_blank" rel="nofollow"><img src="/res/img/rbi/ctp_shop.gif" title="CTP Shop - Branded Apparel" alt="CTP Shop - Branded Apparel" border="0"></a><br><br>
-				<a href="http://store.yahoo.com/cgi-bin/clink?early-pregnancy-tests+vvrend+pregnancytests.html" target="_blank" rel="nofollow"><img src="/res/img/rbi/earlypreg_hpt.gif" title="Early-Pregnancy-Tests.com" alt="Early-Pregnancy-Tests.com" border="0"></a><br><br>
-				<a href="/earlypregnancysymptoms/chart_common_overall.php"><img src="/res/img/rbi/top10.gif" title="Top 10 Very Early Signs of Pregnancy" alt="Top 10 Very Early Signs of Pregnancy" border="0"></a><br><br>
-					</td>
+		<a href="/myaccount/createaccount.php"><img src="/res/img/starttracking_lrg.gif" border="0" alt="Start Tracking Now!"></a><br><br>					<script type="text/javascript"><!--
+			google_ad_client = "pub-6164750948339166";
+			/* 160x600, CTP */
+			google_ad_slot = "1892556619";
+			google_ad_width = 160;
+			google_ad_height = 600;
+			//-->
+			</script>
+			<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+			</script>
+				
+	</td>
 </tr>
 <tr>
 	<td bgcolor="#738697" colspan="2">&nbsp;</td>
