shareminer.com (archived on 2009-06-11)
{
  "alexa_rank": 13882,
  "analysis_subcorpus": true,
  "categories": "parked",
  "char_count": 2128,
  "classifier_probability": 0.93,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.0,
  "homepage_snapshot_redirected_domain": "shareminer.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090401053722id_/http://www.shareminer.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090401053722id_/http%3A//shareminer.com",
  "interval": "2009_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "shareminer.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090611123444id_/http%3A//www.shareminer.com/privacy-policy",
  "policy_title": "Privacy Policy - ShareMiner.com",
  "policy_url": "shareminer.com/privacy-policy",
  "sha1": "27eff93252014b4cdf1daf44ebd8ac58312e2e89",
  "simhash": 10171082750338725523,
  "simhash_updated": false,
  "site_hostname": "shareminer.com",
  "site_url": "http://shareminer.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20090611123444",
  "word_count": 338,
  "year": 2009
}

--- a/s/sh/sha/shareminer.com.html
+++ b/s/sh/sha/shareminer.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the shareminer.com privacy policy that was archived on 2008-12-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081223061924id_/http%3A//www.shareminer.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the shareminer.com privacy policy that was archived on 2009-06-11.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090611123444id_/http%3A//www.shareminer.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head profile="http://gmpg.org/xfn/11">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -177,13 +177,16 @@ ShareMiner.com will not reveal any personal information that users provide to us
 			</ul>
 		</li>
 			
-			<li id="recent-posts" class="widget widget_recent_entries">			<h2 class="widgettitle">Recent Blog Posts</h2>
+	
+		<li id="recent-posts">
+		<h2>Recent Posts</h2>
 			<ul>
-						<li><a href="http://www.shareminer.com/new-release-13">ShareMiner.com Version 2.0 Beta Release </a></li>
-						<li><a href="http://www.shareminer.com/shareminer-blog-1">Welcome to ShareMiner Blog </a></li>
-						</ul>
+					<li><a href="http://www.shareminer.com/new-release-13" title="ShareMiner.com Version 2.0 Beta Release">ShareMiner.com Version 2.0 Beta Release</a></li>
+	<li><a href="http://www.shareminer.com/shareminer-blog-1" title="Welcome to ShareMiner Blog">Welcome to ShareMiner Blog</a></li>
+			</ul>
 		</li>
-
+		
+	
 			
 	</ul>
 			
