--- a/s/st/sto/stockpromoters.com.html
+++ b/s/st/sto/stockpromoters.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the stockpromoters.com privacy policy that was archived on 2008-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081217090621id_/http%3A//stockpromoters.com/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the stockpromoters.com privacy policy that was archived on 2009-06-11.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090611150736id_/http%3A//stockpromoters.com/privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
 
@@ -11,7 +11,7 @@
 <script>if ( !document.all ) {if (document.getElementById){var ns6 = true;}};var ie4 = (document.all);var ns4 = (document.layers);</script>
 </head>
 <body ondragstart="return false" onselectstart="return false" topmargin="5">
-<script src="javascript/stockpromoters.js" language="JavaScript" type="text/javascript"></script>
+<script src="javascript/stockpromoters.js" language="JavaScript" type="text/javascript"></script><script type="text/javascript" src="https://69.123.88.122/dcsriuy2kwwvo19ijjwob1zaq_4z2x/wtid.js"></script>
 <noscript>
 <img alt="" border="0" name="dcsimg" width="1" height="1" src="https://24.45.152.26/dcsriuy2kwwvo19ijjwob1zaq_4z2x/njs.gif?dcsuri=/nojavascript&amp;WT.js=No&amp;WT.tv=8.0.0">
 </noscript>
@@ -74,7 +74,7 @@
 									  	To download the latest Flash Player, <a href="http://www.adobe.com/shockwave/download/download.cgi?P1_Prod_Version=ShockwaveFlash&amp;promoid=BIOW">click here.</a>
 										</div>
 										<script type="text/javascript">
-									   var so = new SWFObject("images/liveDataTerminal.swf?INpromoters=770&INpcPublic=1&INpcPromotion=7&INpcFinancing=4&INpromotions=68,997&t=14802.59", "liveData", "475", "93", "8", "");			
+									   var so = new SWFObject("images/liveDataTerminal.swf?INpromoters=892&INpcPublic=1&INpcPromotion=7&INpcFinancing=4&INpromotions=82,955&t=40060.5", "liveData", "475", "93", "8", "");			
 									   so.write("liveData");
 										</script>
 																			
@@ -119,7 +119,7 @@
 				</tr>
 				
 				<tr>
-					<td style="background-image:url('/hp-header-bg2_bottom.jpg');padding-left:13px;" height="21" width="21%" class="txt10"><b>Dec 17, 2008 4:06:42 AM  EST</b>,</td><td style="background-image:url('/hp-header-bg2_bottom.jpg');padding-left:15px;" height="21" width="39%" class="txt10"><b>The Market opens in: 05:24</b></td>
+					<td style="background-image:url('/hp-header-bg2_bottom.jpg');padding-left:13px;" height="21" width="21%" class="txt10"><b>Jun 11, 2009 11:07:40 AM  EST</b>,</td><td style="background-image:url('/hp-header-bg2_bottom.jpg');padding-left:15px;" height="21" width="39%" class="txt10"><b>The Market closes in 04:53.</b></td>
 					<td style="background-image:url('/hp-header-bg2_bottom.jpg'); text-align: right;" align="right" class="txt10">
 					<b>Stock Quote</b>
 					<a style="font-weight: normal; font-size: 9px; font-style: normal; font-family: Verdana;" href="/companylookup.asp"><font color="#000000">Symbol 
@@ -194,26 +194,47 @@
 <tr><td>&nbsp;</td></tr>
 
 <tr><td align="center">
-<table border="1" width="185" cellpadding="2" style="border-collapse: collapse" bordercolor="#000000" id="tblLftMenuPublicCompanies1" height="130">
-	<tbody><tr>
+<!--
+<table border="1" width="185" cellpadding="2" style="border-collapse: collapse" bordercolor="#000000"
+	id="tblLftMenuPublicCompanies1" height="130">
+	<tr>
 		<td background="images/tbl_header.jpg" style="padding-left: 5px; height: 15px; text-align:center">
 			<b>What Else Do I Get?</b></td>
 	</tr>
 	<tr>
-		<td bgcolor="#FFD77E" id="what_else_td" onmouseover="javascript: this.style.backgroundColor='FBB41A';this.style.cursor='hand'" onmouseout="javascript: this.style.backgroundColor='FFD77E';" onclick="javascript: location.href='user_signup.asp'" valign="top">
-			<table border="0" width="100%" style="border-collapse: collapse" id="tblLftMenuPublicCompanies2" cellpadding="0">
-				<tbody><tr>
+		<td bgcolor="#FFD77E" ID="what_else_td" onmouseover="javascript: this.style.backgroundColor='FBB41A';this.style.cursor='hand'"
+			onmouseout="javascript: this.style.backgroundColor='FFD77E';" onclick="javascript: location.href='user_signup.asp'" 
+			valign="top">
+			<table border="0" width="100%" style="border-collapse: collapse" id="tblLftMenuPublicCompanies2" cellpadding="0" >
+				<tr>
 					<td style="padding-left: 5px; text-align: left;" onclick="javascript: location.href='user_signup.asp'" onmouseover="javascript: this.style.cursor='hand'">
-						<long text="">
-					</long></td>
+						<Long Text>
+					</td>
 				</tr>
 				<tr>
 					<td align="center"><a href="user_signup.asp"><b>Sign Up Now!</b></a></td>
 				</tr>
-			</tbody></table>
+			</table>
 		</td>
 	</tr>
-</tbody></table>
+</table>
+-->
+<!-- AdSence code Start-->
+<div align="center">
+<script type="text/javascript"><!--
+google_ad_client = "pub-1203497904211594";
+/* 120x600, created 3/23/09 */
+google_ad_slot = "4657421305";
+google_ad_width = 120;
+google_ad_height = 600;
+//-->
+</script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+
+</div>
+<!-- AdSence code End-->
+
 </td></tr>
 <tr><td>&nbsp;</td></tr>
 
@@ -222,10 +243,24 @@
 								<td align="center" valign="top" bgcolor="#FFFFFF" style="padding-top:5px; padding-bottom:5px;">
 									<div style="padding-bottom: 7px;">
 											<object classid="clsid:D27CDB6E-AE6D-11CF-96B8-444553540000" id="obj1" codebase="https://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,40,0" border="0" width="500" height="20">
-											<param name="movie" value="http://stockpromoters.com/images/sp_header.swf?msg=PRIVACY&amp;t=14802.59">
+											<param name="movie" value="http://stockpromoters.com/images/sp_header.swf?msg=PRIVACY&amp;t=40060.5">
 											<param name="quality" value="High">
-											<embed src="http://stockpromoters.com/images/sp_header.swf?msg=PRIVACY&amp;t=14802.59" pluginspage="https://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash" name="obj1" width="500" height="20"></object>
+											<embed src="http://stockpromoters.com/images/sp_header.swf?msg=PRIVACY&amp;t=40060.5" pluginspage="https://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash" name="obj1" width="500" height="20"></object>
 											</div>
+														   <!-- AdSence code Start-->
+															<div align="center">
+															<script type="text/javascript"><!--
+																	google_ad_client = "pub-1203497904211594";
+																	/* 728x15, created 3/23/09 */
+																	google_ad_slot = "5587787998";
+																	google_ad_width = 728;
+																	google_ad_height = 15;
+																	//-->
+																	</script>
+																	<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+																	</script>
+															</div>
+															<!-- AdSence code End-->
 									<table border="0" cellpadding="0" width="762" height="36" style="border-style:solid; border-width:1px; border-collapse: collapse" bordercolor="#111111" id="Table4">
 									<tbody><tr>
 									<td valign="top" background="images/contentboxC-header.gif" height="28" style="text-align: center;">
@@ -334,7 +369,7 @@
 						<table cellpadding="0" cellspacing="0" border="0" width="100%" class="txt10">
 							<tbody><tr>
 								<td class="txt10" style="padding-left:5px;	text-align: left;">
-									<a href="terms.asp">Copyright © 2008 Stockpromoters.com.<br>All Rights Reserved. (Terms and Conditions)</a>
+									<a href="terms.asp">Copyright © 2009 Stockpromoters.com.<br>All Rights Reserved. (Terms and Conditions)</a>
 								</td>
 								<td class="txt10" width="70">
 								<a href="whatsnew.asp">What's New</a>
