--- a/a/al/al./al.com.html
+++ b/a/al/al./al.com.html
@@ -1,13 +1,11 @@
-<!--The following is the downloaded HTML source of the al.com privacy policy that was archived on 2008-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081217123515id_/http%3A//www.al.com/privacypolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the al.com privacy policy that was archived on 2009-06-11.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090611182248id_/http%3A//www.al.com/privacypolicy) for the most accurate reproduction.-->
 
 <html><head>
 <title>al.com: Privacy Policy</title>
 <link rel="stylesheet" type="text/css" href="/css/global.css">
 <link rel="stylesheet" type="text/css" href="/css/aboutus.css">
 <script language="javascript" src="/dhtml/includes/Pop.js"></script>
-<script language="javascript" src="http://science.al.com/bama/dhtml/stats/track/vssetup.js"></script>
-<script language="javascript" src="http://geoip.al.com/media/js/geoip.js"></script>
 <style>
 p .a:hover { text-decoration: underline }
 </style>
@@ -42,7 +40,7 @@ if (navigator.userAgent.indexOf('Mozilla/3') != -1 || navigator.userAgent.indexO
 if (OAS_version >= 11)
   document.write('<SCRIPT LANGUAGE=JavaScript1.1 SR' + 'C="' + OAS_url + 'adstream_mjx.ads/' + OAS_sitepage + '/1' + OAS_rns + '@' + OAS_listpos + '?' + OAS_query + '"><\/SCRIPT>');
 //-->
-</script><script language="JavaScript1.1" src="http://ads.al.com/RealMedia/ads/adstream_mjx.ads/www.al.com/privacypolicy/index.ssf/1593599870@BannerTop,Popup,SkyScraper,Sponsor1,SponsorLeft,SponsorRight,TxtLink1,TxtLink2,TxtLink3?NULL"></script>
+</script><script language="JavaScript1.1" src="http://ads.al.com/RealMedia/ads/adstream_mjx.ads/www.al.com/privacypolicy/index.ssf/1633795066@BannerTop,Popup,SkyScraper,Sponsor1,SponsorLeft,SponsorRight,TxtLink1,TxtLink2,TxtLink3?NULL"></script>
 <script language="JavaScript">
 <!-- -->
 document.write('');
@@ -221,8 +219,7 @@ OAS_AD('SponsorRight');
 <img src="/images/spacer.gif" width="1" height="2" vspace="41" hspace="50"><br>
 <table width="190" border="0" cellspacing="2" cellpadding="3">
 <tbody><tr valign="middle"><td width="190" bgcolor="#E3FEF0"><font face="arial,helvetica,sans-serif" size="1" color="#ff0000">
-»&nbsp;<a href="http://vote.ussa.edu/aaoy" target="_blank"><font color="#000000">Vote for Athlete of the Year</font></a><br>
-»&nbsp;<a href="/contests/" target="_blank&quot;"><font color="#000000">More Giveaways</font></a>
+»&nbsp;<a href="/contests/" target="_blank&quot;"><font color="#000000">Sweepstakes &amp; Giveaways</font></a>
 </font></td></tr>
 </tbody></table><img src="/images/spacer.gif" width="1" height="1" vspace="2"><br>
 <!--- OAS AD 'Sponsor1' begin -->
@@ -301,7 +298,7 @@ OAS_AD('TxtLink3');
 <td width="5">&nbsp;</td>
 <td width="396"><font face="arial,sans-serif" size="2"><img src="http://www.al.com/images/spacer.gif" width="1" height="1" hspace="30"><b>Special Home Delivery Offers!</b><br><a href="http://ads.advance.net/RealMedia/ads/click_lx.ads/www.al.com/////Click/ALABAMALIVE/AL_FOOTER/footer_bhm.html/">The Birmingham News</a> | <a href="http://ads.advance.net/RealMedia/ads/click_lx.ads/www.al.com/////Click/ALABAMALIVE/AL_FOOTER/footer_hsv.html/">The Huntsville Times</a> | <a href="http://ads.advance.net/RealMedia/ads/click_lx.ads/www.al.com/////Click/ALABAMALIVE/AL_FOOTER/footer_mob.html/">Press-Register</a></font></td>
 </tr>
-</tbody></table><img src="http://www.al.com/images/spacer.gif" width="1" height="1" vspace="3"><hr size="1" width="530" noshade=""><img src="http://www.al.com/images/spacer.gif" width="1" height="1" vspace="2"><br><a href="/aboutus/" target="_top">About Us</a> | <a href="/contactus/" target="_top">Help/Feedback</a> | <a href="/mediakit/" target="_top">Advertise With Us</a><br><img src="http://www.al.com/images/spacer.gif" width="1" height="1" vspace="1"><br>© 2008 Alabama Live LLC [al.com and gulflive.com] All rights reserved.<br>Use of this Site constitutes acceptance of our <a href="/useragreement/" target="_top">User Agreement</a> and <a href="/privacypolicy/" target="_top">Privacy Policy</a>.</font><p><font face="arial,sans-serif" size="1"><table width="201" border="0" cellspacing="0" cellpadding="0">
+</tbody></table><img src="http://www.al.com/images/spacer.gif" width="1" height="1" vspace="3"><hr size="1" width="530" noshade=""><img src="http://www.al.com/images/spacer.gif" width="1" height="1" vspace="2"><br><a href="/aboutus/" target="_top">About Us</a> | <a href="/contactus/" target="_top">Help/Feedback</a> | <a href="/mediakit/" target="_top">Advertise With Us</a><br><img src="http://www.al.com/images/spacer.gif" width="1" height="1" vspace="1"><br>© 2009 Alabama Live LLC [al.com and gulflive.com] All rights reserved.<br>Use of this Site constitutes acceptance of our <a href="/useragreement/" target="_top">User Agreement</a> and <a href="/privacypolicy/" target="_top">Privacy Policy</a>.</font><p><font face="arial,sans-serif" size="1"><table width="201" border="0" cellspacing="0" cellpadding="0">
 <tbody><tr>
 <td width="100"><a href="http://www.advance.net/" target="_top"><img src="http://www.al.com/images/footer/advancelogo.gif" width="88" height="31" border="0"></a></td>
 <td width="1" bgcolor="#000000"><img src="http://www.al.com/images/spacer.gif" width="1" height="1"></td>
@@ -355,19 +352,14 @@ OAS_AD('Popup');
 </div>
 <!--- OAS AD 'Popup' end -->
 
-<script language="javascript">
-if (_pdata){
-trackpage();
- }
-captureLink();
-</script>
-<noscript> <img src="http://science.al.com/cgi-bin/stats/rewrite.cgi?Log=1&javascript=false" border="0" width="1" height="1"> </noscript> <script language="JavaScript">var tcdacmd="dt";</script>
-<script src="http://an.tacoda.net/an/12326/slf.js" language="JavaScript"></script>
-<!--- GEOIP -->
+
+<script language="javascript" src="http://geoip.al.com/media/js/geoip.js"></script>
 <script>
 GeoIP_Cookie();
 </script>
-<!--- GEOIP END -->
+<script language="JavaScript">var tcdacmd="dt";</script>
+<script src="http://an.tacoda.net/an/12326/slf.js" language="JavaScript"></script>
+<img height="1" width="1" src="http://view.atdmt.com/action/MSFT_Advance_AE_ExtData/v3/atc1.AL">
 <script language="JavaScript" type="text/javascript" src="http://www.al.com/js/sitecatalyst/s_code.js"></script>
 <script language="JavaScript" type="text/javascript"><!--
 /* You may give each page an identifying name, server, and channel on
