--- a/p/pl/plr/plrxtreme.com.html
+++ b/p/pl/plr/plrxtreme.com.html
@@ -1,8 +1,8 @@
-<!--The following is the downloaded HTML source of the plrxtreme.com privacy policy that was archived on 2008-12-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081224014250id_/http%3A//www.plrxtreme.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the plrxtreme.com privacy policy that was archived on 2009-06-12.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090612005823id_/http%3A//www.plrxtreme.com/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
-<title>PLR Xtreme | Privacy Policy</title>
+<title>PLR Xtreme - Privacy Policy</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 </head>
 
@@ -69,18 +69,15 @@
           </div></td>
       </tr>
     </tbody></table>
-    <table width="650" border="0" align="center" cellpadding="15" cellspacing="0" bgcolor="#FFFFFF">
-      <tbody><tr> 
-        <td valign="top"><div align="center"> 
-            <hr size="3">
-            <p><font size="2" face="Tahoma, Arial"><a href="http://www.amloh.com/FAQ_plrxtreme.php" target="_blank">Support</a> 
-              | <a href="privacy.htm" target="_blank">Privacy Policy</a> | <a href="earnings.htm" target="_blank">Earnings 
-              Disclaimer<br>
-              </a></font><font size="2" face="Tahoma, Arial">© Edmund Loh 
-              &amp; PLRXtreme.com All Rights Reserved. No part of this website 
-              may be reproduced in any form, by any means, without express &amp; 
-              written permission from AMLOH ENTERPRISE.</font></p>
-          </div></td>
+    <table width="650" border="0" cellpadding="20" cellspacing="0">
+      <tbody><tr valign="top"> 
+        <td> <p align="center"><font size="2" face="Tahoma, Arial"><a href="privacy.htm" target="_blank">Privacy 
+            Policy</a> | <a href="earnings.htm" target="_blank">Earnings Disclaimer</a> 
+            | <a href="http://www.amloh.com/FAQ_plrxtreme.php" target="_blank">Support 
+            Helpdesk</a><br>
+            © Edmund Loh &amp; PLRXtreme.com All Rights Reserved. No part 
+            of this website may be reproduced in any form, by any means, without 
+            express &amp; written permission from AMLOH ENTERPRISE.</font></p></td>
       </tr>
     </tbody></table>
   </div>
