--- a/a/an/ang/angel.com.html
+++ b/a/an/ang/angel.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the angel.com privacy policy that was archived on 2008-12-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081218055450id_/http%3A//www.angel.com/privacy-policy.jsp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the angel.com privacy policy that was archived on 2009-06-12.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090612012117id_/http%3A//www.angel.com/privacy-policy.jsp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <title>Angel.com - Privacy Policy</title>
@@ -156,47 +156,11 @@
   <div id="footer"><a href="/customers/index.jsp" class="footer_png2"><span class="hidetext">Our Customers</span></a>
   <ul>
     <li><a href="/solutions/">solutions</a>  | <a href="/resource-center/ivr-university.jsp">resource center</a> | <a href="/services/">services</a>  |  <a href="/customers/">customers</a> |  <a href="/company/">company</a> | <a href="/contact.jsp">contact us</a>  |  <a href="http://www.angel.com/SubscriberEditor?command=forward&amp;key=loginPage">customer login</a>  |  <a href="/company/careers.jsp">careers</a>  |  <a href="/resource-center/newsletter.jsp">newsletter</a>  |  <a href="http://blogs.angel.com/blog/" target="_blank">IVR blog</a></li>
-    <li>Copyright © 2008 Angel.com.  All Rights Reserved.  Your Telephone Just Got Smarter<sup>SM</sup></li>
+    <li>Copyright © 2009 Angel.com.  All Rights Reserved.  Your Telephone Just Got Smarter<sup>SM</sup></li>
     <li><a href="/privacy-policy.jsp">privacy policy</a>  |  <a href="/terms-conditions.jsp">terms &amp; conditions</a>  |  <a href="/sitemap.jsp">site map</a></li>
 </ul></div> 
   <!--end footer div !-->
 
-<!--Begin Manticore Technology Code-->
-<!--Copyright 2000-2006, Manticore Technology Corporation.  All rights reserved.  Patent pending.--> 
-<!--Consumer Privacy Statement available at www.ManticoreTechnology.com/ConsumerPrivacy.asp-->
-<!--www.ManticoreTechnology.com-->
-<script language="JavaScript" type="text/javascript">
-//<!--
-	var MTC_GROUP="319";
-	var MTC_ID="3411";
-	var MTC_Key="C5076D33-B857-4EBF-8EEC-FE935A66EF94";
-//-->
-</script>
-<script language="JavaScript" type="text/javascript">var MTCjsv;</script>
-<script language="JavaScript1.0" type="text/javascript">MTCjsv="1.0";</script>
-<script language="JavaScript1.1" type="text/javascript">MTCjsv="1.1";</script>
-<script language="JavaScript1.2" type="text/javascript">MTCjsv="1.2";</script>
-<script language="JavaScript1.3" type="text/javascript">MTCjsv="1.3";</script>
-<script language="JavaScript1.4" type="text/javascript">MTCjsv="1.4";</script>
-<script language="JavaScript1.5" type="text/javascript">MTCjsv="1.5";</script>
-<script language="JavaScript1.6" type="text/javascript">MTCjsv="1.6";</script>
-<script language="JavaScript1.7" type="text/javascript">MTCjsv="1.7";</script>
-<script language="JavaScript" type="text/javascript" src="/mtc/mtcJSAPI.js"></script>
-<!--Begin Optional Configuration-->
-<script language="JavaScript" type="text/javascript">
-//<!--
-	//Todo:	Implement site specific functionality here.
-	//mtcSetServerGroup("");
-	//mtcSetContentCategory("");
-//-->
-</script>
-<!--End Optional Configuration-->
-<script language="JavaScript" type="text/javascript">
-//<!--
-	mtcGO();
-//-->
-</script>
-<!--End Manticore Technology Code-->
 
 
 <script type="text/javascript" src="http://crazyegg.com/pages/scripts/0003/7956.js"> </script>
@@ -209,6 +173,13 @@ document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.
 var pageTracker = _gat._getTracker("UA-32045-1");
 pageTracker._initData();
 pageTracker._trackPageview();
+</script>
+
+<script src="http://mktg.angel.com/app/webtracker.js" type="text/javascript"></script>
+<script type="text/javascript">
+_tia="TI_705a3ff0-58ff-d2a2-8d9b-49637289d5ea";
+_tid="http://mktg.angel.com/app/";
+_tido();
 </script>
 
 
