--- a/b/bi/bil/billtrust.com.html
+++ b/b/bi/bil/billtrust.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the billtrust.com privacy policy that was archived on 2008-12-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081230234618id_/http%3A//www.billtrust.com/privacy_policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the billtrust.com privacy policy that was archived on 2009-06-12.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090612012843id_/http%3A//billtrust.com/privacy_policy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>Billtrust: We’re a billing company dedicated to simplifying the billing process</title>
@@ -57,7 +57,7 @@
 			    <li><a href="consumer_paper_billing.php">U.S. Mail Billing</a></li>
   				<li><a href="consumer_online_billing.php">Online Billing (EBPP)</a></li>
   				<li><a href="consumer_billing_one_time_payment.php">One-Time Payment</a></li>  
-				<li><a href="consumer_billing_eAdoption.php">e-Adoption Program</a></li>				
+<li><a href="payments360.php">Payments 360</a></li>  <li><a href="consumer_billing_eAdoption.php">e-Adoption Program</a></li>				
   				<li><a href="consumer_billing_customercare.php">CustomerCare</a></li>
 				</ul>
 			</li>			
@@ -166,7 +166,7 @@ Billtrust uses strict precautions to keep the personal information disclosed to 
               by e-mail at <a href="mailto:info@billtrust.com" class="textlink">info@billtrust.com</a>.</td>
         </tr>
       </tbody></table></td>
-      <td class="sidebar"><script language="JavaScript">displayQuote();</script><div class="sidebarquote">"Customers say they are getting their invoices in a more timely fashion and they like the enhanced layout that Billtrust designed for us. We’re very happy with the service."</div><div class="sidebarquoter">- Belinda Ellenburg, Systems Coordinator, Eastern Industrial Supplies, Inc., South Carolina</div></td>
+      <td class="sidebar"><script language="JavaScript">displayQuote();</script><div class="sidebarquote">"We really like Billtrust.  We are saving a lot of time and were able to reduce our office staff by one person due to no longer printing, stuffing and mailing bills.  Our invoices look wonderful through Billtrust compared to anything we could do here."</div><div class="sidebarquoter">- Meridith McArthur, Director of Finance, Mid-State Supply</div></td>
     </tr>
   </tbody></table>  <div class="bottomnav"><a href="http://www.billtrust.com">Home</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="business_billing_overview.php">B2B
       Billing Services</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="consumer_billing_overview.php">B2C
