--- a/b/bi/bik/bike-games.net.html
+++ b/b/bi/bik/bike-games.net.html
@@ -1,12 +1,12 @@
-<!--The following is the downloaded HTML source of the bike-games.net privacy policy that was archived on 2008-12-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081212225541id_/http%3A//www.bike-games.net/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bike-games.net privacy policy that was archived on 2009-06-12.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090612030707id_/http%3A//bike-games.net/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Language" content="en-us">
 <meta name="keywords" content="bike games, racing games, bmx games, bike racing games, free games, online racing games, free online games, motorcycle games, bicycle games, sports games, drifting games, action games">
-<meta name="description" content="Bike-Games is your Number One Archive for Free online Bike games, racing games, bike racing games, and Motorcycle games">
+<meta name="description" content="Bike games is your No. 1 archive for free online bike games, racing games, bike racing games, car games, car racing games and motorcycle games. Play free online games now and kill your boring time.">
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<title>Bikes games Privacy Policy</title>
+<title>Racing games Privacy Policy</title>
 <link href="http://www.bike-games.net/styles2.css" rel="stylesheet" type="text/css">
 </head>
 
@@ -26,7 +26,7 @@
 						<tbody><tr>
 							<td width="240"><img src="http://www.bike-games.net/images/logo.png" alt="Racing Games"></td>
 							<td align="center" valign="bottom">
-							<table border="0" width="728" id="table2" cellspacing="3" height="92">
+							<table border="0" width="728" id="table2" cellspacing="3" height="90">
 	<tbody><tr>
 		<td bgcolor="#FFFFFF"><iframe src="http://www.bike-games.net/ads/topad.php" width="729" height="91" marginwidth="0" marginheight="0" frameborder="0" scrolling="no"></iframe>
 		</td>
@@ -41,7 +41,7 @@
 					<table border="0" width="100%" id="table1" cellpadding="4" cellspacing="5">
 	<tbody><tr>
 		<td><a href="http://www.bike-games.net/"><h2>HOME</h2></a></td>
-		<td><a href="http://www.bike-games.net/car-games/"><h2>CAR GAMES</h2></a></td><td><a href="http://www.bike-games.net/bike-games/"><h2>BIKE GAMES</h2></a></td><td><a href="http://www.bike-games.net/dress-up-games/"><h2>DRESS UP</h2></a></td><td><a href="http://www.bike-games.net/shooting-games/"><h2>SHOOTERS</h2></a></td><td><a href="http://www.bike-games.net/sports-games/"><h2>SPORTS</h2></a></td><td><a href="http://www.bike-games.net/Puzzle/"><h2>PUZZLE</h2></a></td>		<td><a href="/trade_traffic.php"><h2>WEBMASTERS</h2></a></td>
+		<td><a href="http://www.bike-games.net/car-games/"><h2>CAR GAMES</h2></a></td><td><a href="http://www.bike-games.net/bike-games/"><h2>BIKE GAMES</h2></a></td><td><a href="http://www.bike-games.net/dress-up-games/"><h2>DRESS UP</h2></a></td><td><a href="http://www.bike-games.net/shooting-games/"><h2>SHOOTERS</h2></a></td><td><a href="http://www.bike-games.net/sports-games/"><h2>SPORTS</h2></a></td><td><a href="http://www.bike-games.net/Dowload Free Games/"><h2>DOWLOAD FREE GAMES</h2></a></td>		<td><a href="/login"><h2>SIGN UP!</h2></a></td>
 		<td><a href="http://www.bike-games.net/hosted.php"><h2>HOSTED GAMES</h2></a></td>
 	</tr>
 </tbody></table>
@@ -49,18 +49,18 @@
 				</tr>
 				<tr>
 					<td align="center" colspan="2" background="http://www.bike-games.net/images/arcade-hp_02_03.gif" height="132">
-					<table border="0" width="80%" id="table1" cellspacing="10" cellpadding="3">
+					<table border="0" width="80%" id="table1" cellspacing="1" cellpadding="3">
 	<tbody><tr>
 	<td>
-		<a href="http://www.bike-games.net/show/hawaiian-runner"><img src="http://www.bike-games.net/m_videos/thumbs/hawaiian-runner.gif" border="0" height="90" width="90" alt="Hawaiian Runner"></a></td>	<td>
-		<a href="http://www.bike-games.net/show/wedding-dress-up"><img src="http://www.bike-games.net/m_videos/thumbs/Wedding-Dress-Up.jpg" border="0" height="90" width="90" alt="Wedding Dress Up"></a></td>	<td>
-		<a href="http://www.bike-games.net/show/4-wheel-fury-2"><img src="http://www.bike-games.net/m_videos/thumbs/L4wheelfury2.gif" border="0" height="90" width="90" alt="4 Wheel Fury 2"></a></td>	<td>
-		<a href="http://www.bike-games.net/show/drag-racer-2"><img src="http://www.bike-games.net/m_videos/thumbs/dragracer2.gif" border="0" height="90" width="90" alt="Drag Racer 2"></a></td>	<td>
-		<a href="http://www.bike-games.net/show/corner-with-confidence"><img src="http://www.bike-games.net/m_videos/thumbs/conerwit.gif" border="0" height="90" width="90" alt="Corner With Confidence"></a></td>	<td>
-		<a href="http://www.bike-games.net/show/jewel-quest-3"><img src="http://www.bike-games.net/m_videos/thumbs/jewelquest3_1.jpg" border="0" height="90" width="90" alt="Jewel Quest 3"></a></td>	<td>
-		<a href="http://www.bike-games.net/show/cradle-of-rome"><img src="http://www.bike-games.net/m_videos/thumbs/cradleofrome_1.jpg" border="0" height="90" width="90" alt="Cradle of Rome"></a></td>	<td>
-		<a href="http://www.bike-games.net/show/day-drive"><img src="http://www.bike-games.net/m_videos/thumbs/day-drive.gif" border="0" height="90" width="90" alt="Day Drive"></a></td>	<td>
-		<a href="http://www.bike-games.net/show/diesel-and-death"><img src="http://www.bike-games.net/m_videos/thumbs/dieselanddeath100.gif" border="0" height="90" width="90" alt="Diesel and Death"></a></td>	</tr>
+		<a href="http://www.bike-games.net/show/red-cross-eru"><img src="http://www.bike-games.net/m_videos/thumbs/red-cross.gif" border="0" height="100" width="102" alt="Red Cross ERU"></a></td>	<td>
+		<a href="http://www.bike-games.net/show/spec-ops"><img src="http://www.bike-games.net/m_videos/thumbs/spec-ops.jpg" border="0" height="100" width="102" alt="Spec Ops"></a></td>	<td>
+		<a href="http://www.bike-games.net/show/age-of-speed2"><img src="http://www.bike-games.net/m_videos/thumbs/ageofspeed.jpg" border="0" height="100" width="102" alt="Age Of Speed"></a></td>	<td>
+		<a href="http://www.bike-games.net/show/jewel-quest-3"><img src="http://www.bike-games.net/m_videos/thumbs/jewelquest3_1.jpg" border="0" height="100" width="102" alt="Jewel Quest 3"></a></td>	<td>
+		<a href="http://www.bike-games.net/show/halloween-ride-game"><img src="http://www.bike-games.net/m_videos/thumbs/halloweenridegame.gif" border="0" height="100" width="102" alt="Halloween Ride Game"></a></td>	<td>
+		<a href="http://www.bike-games.net/show/burning-rubber-2"><img src="http://www.bike-games.net/m_videos/thumbs/burning-rubber-2.gif" border="0" height="100" width="102" alt="Burnin Rubber 2"></a></td>	<td>
+		<a href="http://www.bike-games.net/show/virtual-drive"><img src="http://www.bike-games.net/m_videos/thumbs/virtualdrive.jpg" border="0" height="100" width="102" alt="Virtual Drive"></a></td>	<td>
+		<a href="http://www.bike-games.net/show/2fast2furious"><img src="http://www.bike-games.net/m_videos/thumbs/2fast2furious.jpg" border="0" height="100" width="102" alt="2 Fast 2 Furious"></a></td>	<td>
+		<a href="http://www.bike-games.net/show/power-driving"><img src="http://www.bike-games.net/m_videos/thumbs/power-driving.gif" border="0" height="100" width="102" alt="Power Driving"></a></td>	</tr>
 </tbody></table>
 
 					</td>
@@ -171,42 +171,38 @@ Your use of our site, including any dispute concerning privacy, is  subject to t
   </div>
 	</td>
 	</tr>
- <tr><td align="center"><table border="0" width="100%" id="table1" cellspacing="0" cellpadding="0">
+ <tr><td align="center">&nbsp;&nbsp;-&nbsp;&nbsp;<a href="/sites.php">Free Games Websites</a><table border="0" width="100%" id="table1" cellspacing="0" cellpadding="0">
 	<tbody><tr>
 		<td align="center" valign="top">
+
 
 <script type="text/javascript">
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
 </script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
 <script type="text/javascript">
-var pageTracker = _gat._getTracker("UA-3138290-7");
+try {
+var pageTracker = _gat._getTracker("UA-3138290-11");
 pageTracker._trackPageview();
-</script>
+} catch(err) {}</script>
+
 
 <!-- Start of StatCounter Code -->
 <script type="text/javascript">
 var sc_project=4213180; 
 var sc_invisible=1; 
-var sc_partition=48; 
+var sc_partition=53; 
 var sc_click_stat=1; 
 var sc_security="72cbd3c4"; 
 </script>
 
-<script type="text/javascript" src="http://www.statcounter.com/counter/counter.js"></script><noscript><div class="statcounter"><a title="web statistics" href="http://www.statcounter.com/free_web_stats.html" target="_blank"><img class="statcounter" src="http://c.statcounter.com/4213180/0/72cbd3c4/1/" alt="web statistics" ></a></div></noscript>
+<script type="text/javascript" src="http://www.statcounter.com/counter/counter.js"></script><noscript><div class="statcounter"><a title="wordpress stats " href="http://www.statcounter.com/wordpress.com/" target="_blank"><img class="statcounter" src="http://c.statcounter.com/4213180/0/72cbd3c4/1/" alt="wordpress stats " ></a></div></noscript>
 <!-- End of StatCounter Code -->
 
-<!-- ValueClick Media POP-UNDER CODE v1.8 for bike-games.net (12 hour) -->
-<script language="javascript"><!--                                 
-var dc=document; var date_ob=new Date();
-dc.cookie='h2=o; path=/;';var bust=date_ob.getSeconds();
-if(dc.cookie.indexOf('e=llo') <= 0 && dc.cookie.indexOf('2=o') > 0){
-dc.write('<scr'+'ipt language="javascript" src="http://media.fastclick.net');
-dc.write('/w/pop.cgi?sid=43498&m=2&tp=2&v=1.8&c='+bust+'"></scr'+'ipt>');
-date_ob.setTime(date_ob.getTime()+43200000);
-dc.cookie='he=llo; path=/; expires='+ date_ob.toGMTString();} // -->
-</script>                                                          
-<!-- ValueClick Media POP-UNDER CODE v1.8 for bike-games.net -->
+
+
+
+
 
 
 <iframe src="http://www.bike-games.net/ads/bottomad.php" width="729" height="108" marginwidth="0" marginheight="0" frameborder="0" scrolling="no"></iframe>
@@ -215,7 +211,7 @@ dc.cookie='he=llo; path=/; expires='+ date_ob.toGMTString();} // -->
 	</td></tr>
 	<tr>
 		<td align="center" valign="top">copyright © 
-		2008 Bike-Games.net&nbsp;&nbsp;-&nbsp;&nbsp;<a href="/contact">Contact</a>&nbsp;&nbsp;-&nbsp;&nbsp;<a href="/trade_traffic.php">Trade Traffic</a>&nbsp;&nbsp;-&nbsp;&nbsp;<a href="http://www.bike-games.net/hosted.php">Hosted Games</a>&nbsp;&nbsp;-&nbsp;&nbsp;<a href="/trade_stats.php">Trade Stats</a></td>
+		2009 Bike-Games.net&nbsp;&nbsp;-&nbsp;&nbsp;<a href="/contact">Contact</a>&nbsp;&nbsp;-&nbsp;&nbsp;<a href="/trade_traffic.php">Trade Traffic</a>&nbsp;&nbsp;-&nbsp;&nbsp;<a href="http://playhub.com" target="_blank">Online Games</a>&nbsp;&nbsp;-&nbsp;&nbsp;<a href="/trade_stats.php">Trade Stats</a></td>
 	</tr>
 	<tr>
 		<td align="center" valign="top">&nbsp;</td>
