hyenacart.com (archived on 2009-06-12)
{
  "alexa_rank": 62890,
  "analysis_subcorpus": true,
  "categories": "shopping",
  "char_count": 6032,
  "classifier_probability": 0.95,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.21,
  "homepage_snapshot_redirected_domain": "hyenacart.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090215003904id_/http://hyenacart.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090215003904id_/http%3A//hyenacart.com",
  "interval": "2009_A",
  "link_text": "Privacy policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "hyenacart.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090612060735id_/http%3A//hyenacart.com/privacy.php",
  "policy_title": "Hyena Cart :: Privacy Policy",
  "policy_url": "hyenacart.com/privacy.php",
  "sha1": "afef268e472d75c9ed87a44445a08778a0d3e0bf",
  "simhash": 2060782330778864592,
  "simhash_updated": false,
  "site_hostname": "hyenacart.com",
  "site_url": "http://hyenacart.com",
  "smog": 13.02,
  "strict_updated": false,
  "timestamp": "20090612060735",
  "word_count": 1001,
  "year": 2009
}

--- a/h/hy/hye/hyenacart.com.html
+++ b/h/hy/hye/hyenacart.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the hyenacart.com privacy policy that was archived on 2008-12-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081202090544id_/http%3A//hyenacart.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hyenacart.com privacy policy that was archived on 2009-06-12.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090612060735id_/http%3A//hyenacart.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -7,12 +7,14 @@
 <link rel="stylesheet" type="text/css" href="hc_style2.css">
 <link rel="stylesheet" type="text/css" href="superfish.css">
 <link rel="stylesheet" type="text/css" href="tabcontent.css">
-<script type="text/javascript" src="http://www.google.com/jsapi"></script>
-<script>
-    google.load("jquery", "1.2.3");  
-</script>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
 <script type="text/javascript" src="library/jquery.corner.js"></script>
 <script type="text/javascript" src="library/superfish.js"></script>
+
+
+
+
+
 
 
 
@@ -31,12 +33,18 @@
 </div>
 
 <div id="search-box">
+<table>
+<tbody><tr><td valign="middle">       
+ <a href="hc_search.php"><span style="font: tahoma; font-size: 12px; color: #7B5024;">Advanced Search</span></a>
+<br>
+<a href="javascript:void(0)" onclick="window.open('../findstore.php','mark_fav','height=300, width=500,scrollbars=no')"><span style="font: tahoma; font-size: 12px; color: #7B5024;">Jump to store...</span></a>
+</td><td valign="middle"> 
     <form action="hc_search.php?c=1" method="POST&quot;">
-        <a href="hc_search.php"><span style="font: tahoma; font-size: 12px; color: #7B5024;">Advanced Search</span></a>
         <input type="text" name="all" size="14" style="border: 1px solid #7B5024; align: center; padding-bottom: 0px; padding-top: 4px; padding-left: 4px;" align="center">
 	<input type="hidden" name="c" value="1">
 	<input type="image" value="Search" src="Hyena_images/icons/go.png" align="absbottom">
     </form>
+</td></tr></tbody></table>
 </div>
 </div>
 
@@ -77,6 +85,9 @@
 								</li>
 								<li>
 									<a href="most_spots.php">Most Spots</a>
+								</li>
+								<li>
+									<a href="/Spots_Corner/">Spots' Corner</a>
 								</li>
 							</ul>
 						</li>
@@ -179,6 +190,9 @@
 							<a href="purchase_history.php">Purchases</a>
 						</li>
 						<li>
+							<a href="auction_lottery_history.php">A/L history</a>
+						</li>
+						<li>
 							<a href="manage.php">Change password</a>
 						</li>
 						<li>
@@ -190,6 +204,7 @@
 						<li>
 							<a href="stockpage_spots.php">SC stock page</a>
 						</li>
+
 					</ul>
 				</li>
 
@@ -470,7 +485,7 @@ If you have any questions or suggestions regarding our privacy policy, please co
 <div class="footer-outer">
     <div class="border-round">
         <div id="footer-info">
-There are 627 shoppers online and 38,314 registered HC shoppers        </div>
+There are 440 shoppers online and 46,322 registered HC shoppers        </div>
     </div>
 </div>
 
