business-software.com (archived on 2009-06-12)
{
  "alexa_rank": 94088,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 10943,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.29,
  "homepage_snapshot_redirected_domain": "business-software.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090204114831id_/http://business-software.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090204114831id_/http%3A//business-software.com",
  "interval": "2009_A",
  "link_text": "Privacy Statement",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "business-software.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090612095403id_/http%3A//business-software.com/privacy-statement.php",
  "policy_title": "Business Software | Home",
  "policy_url": "business-software.com/privacy-statement.php",
  "sha1": "5ec99f39acef1cd6ce203326a735d6a82b2eff33",
  "simhash": 10248598154958181542,
  "simhash_updated": false,
  "site_hostname": "business-software.com",
  "site_url": "http://business-software.com",
  "smog": 15.25,
  "strict_updated": false,
  "timestamp": "20090612095403",
  "word_count": 1770,
  "year": 2009
}

--- a/b/bu/bus/business-software.com.html
+++ b/b/bu/bus/business-software.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the business-software.com privacy policy that was archived on 2008-10-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081017120429id_/http%3A//www.business-software.com/privacy-statement.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the business-software.com privacy policy that was archived on 2009-06-12.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090612095403id_/http%3A//business-software.com/privacy-statement.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
     <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
@@ -25,11 +25,10 @@
 
 <div id="menu">
 		<ul id="nav">
-			<li id="profiles"><a href="/crm-reports/index.php" class="link"><b>"Top 10" Reports</b></a></li>
-			<li id="about"><a href="/crm/all-about-crm.php" class="link"><b>All About CRM</b></a></li>
-			<li id="erp"><a href="/erp/all-about-erp.php" class="link"><b>All About ERP</b></a></li>
-	  		<li id="tools"><a href="/crm-evaluation/index.php" class="link"><b>Software Buying Tools</b></a></li>
-			<li id="vendor"><a href="/crm-solutions/index.php" class="link"><b>Software Showcase</b></a></li>
+			<li id="profiles"><a href="/top-10-reports.php" class="link"><b>"Top 10" Reports</b></a></li>
+			<li id="find_software"><a href="/find-business-software.php" class="link"><b>Find Business Software</b></a></li>			
+	  		<li id="tools"><a href="/software-buying-tools.php" class="link"><b>White Papers &amp; Demos</b></a></li>
+			<li id="vendor"><a href="/vendor-showcase.php" class="link"><b>Vendor Showcase</b></a></li>
 			<li id="newsletter"><a href="http://www.business-software.com/crm/crmbuzz/index.php" class="link"><b>Blog</b></a></li>
 		
       </ul>
@@ -42,7 +41,9 @@
 
 <div id="main">
 
-<div id="blue"></div>
+<div id="blue" style="text-align:right;">
+	<!--<div style="padding: 7px 20px 0px 20px;"><a href="/crm-reports/index.php">Download the Top 40 CRM Vendors Report Today!</a></div>-->
+</div>
 		
 <!--Main nav End -->
 
@@ -155,7 +156,7 @@ window.open( "/newsletter/signup-newsletter.php", "myWindow",
 <!--Footer start -->
 <div id="bottom">&nbsp;</div>
     <div id="footer">
-            <a href="/index.php">© 2008 Business-Software.com.</a>All Rights Reserved. | <a href="/privacy-statement.php">Privacy
+            <a href="/index.php">© 2009 Business-Software.com.</a>All Rights Reserved. | <a href="/privacy-statement.php">Privacy
                 Statement</a> | <a href="/termsofuse.php">Terms of Use</a> | <a href="mailto:info@business-software.com">
                     Contact Us</a> | <a href="/advertising.php">Advertising</a> | <a href="/sitemap.php">Sitemap</a></div>
     </div><script type="text/javascript">
