okcollegestart.org (archived on 2009-06-12)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "education",
  "char_count": 14281,
  "classifier_probability": 0.95,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "very_confusing",
  "flesch_kincaid": 17.19,
  "homepage_snapshot_redirected_domain": "okcollegestart.org",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090410205047id_/http://www.okcollegestart.org/home.aspx",
  "homepage_snapshot_url": "https://web.archive.org/web/20090410205021id_/http%3A//okcollegestart.org",
  "interval": "2009_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "okcollegestart.org",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090612202805id_/http%3A//www.okcollegestart.org/privacy_policy.aspx",
  "policy_title": "Privacy Policy",
  "policy_url": "okcollegestart.org/privacy_policy.aspx",
  "sha1": "c7e73b1d8f960c4c62062de865c51f11f38d0c8c",
  "simhash": 5412974896455090260,
  "simhash_updated": false,
  "site_hostname": "okcollegestart.org",
  "site_url": "http://okcollegestart.org",
  "smog": 19.12,
  "strict_updated": false,
  "timestamp": "20090612202805",
  "word_count": 2204,
  "year": 2009
}

--- a/o/ok/okc/okcollegestart.org.html
+++ b/o/ok/okc/okcollegestart.org.html
@@ -1,15 +1,16 @@
-<!--The following is the downloaded HTML source of the okcollegestart.org privacy policy that was archived on 2008-12-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081222161601id_/http%3A//okcollegestart.org/privacy_policy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the okcollegestart.org privacy policy that was archived on 2009-06-12.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090612202805id_/http%3A//www.okcollegestart.org/privacy_policy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head id="xapHtmlHead"><meta name="keywords" content="xap, college, university, degree, major, financial aid, act, sat, psat, scholarships, online application, college application, admission, campus tour"><meta name="description" content="College advice, college admission applications, pay for college, financial aid, scholarships, apply online for admission, online applications at Xap."><meta name="robots" content="index,follow"><meta name="author" content="Xap Corporation"><meta name="copyright" content="Copyright Xap Corporation 1997-2005"><meta name="distribution" content="Global"><meta http-equiv="content-type" content="text/html; charset=iso-8859-1"><meta http-equiv="content-language" content="EN"><meta name="revisit-after" content="15"><title>
 	Privacy Policy
 </title><link rel="Stylesheet" type="text/css" media="screen, print" href="/Core/31d34c6f-6124-40a6-9ea9-8e2ba23489f7.style"></head>
 	<body id="xapHtmlBody">
 		<form name="xapHtmlForm" method="post" action="/privacy_policy.aspx" id="xapHtmlForm">
-<input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwUJMzEyNDY4ODg4ZGSHrdTy/yGxkpx5rtgAZ5VNbOSbdQ==">
+<input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwUJMzEyNDY4ODg4ZGS4LIG77KK0n8KvTNzdR7k3AkGF9Q==">
 
 
-<script src="/ScriptResource.axd?d=LA4Bee_52h7vKFGSj-3ot-VLc0hXe15wBKAPqlS1pJrk42I8r68NPlHIzWPIfVISDgUAil63IZRiJd1NrUoQ85om4m997iGzAZMJ41VEg4I1&amp;t=633537327025946233" type="text/javascript"></script>
+<script src="/ScriptResource.axd?d=GllMjhuKRuK5f20_TlMthaxDSSkbOJ5G_dHOCPTWtj2vujrG_eJVCMqG7AMpTM5crAzhEfmKz5-wOgU20fCfJyh5qczRC1gIsRHcT3aQlek1&amp;t=633537327025946233" type="text/javascript"></script>
+<input type="hidden" name="__EVENTVALIDATION" id="__EVENTVALIDATION" value="/wEWAwKDlfmJCQK3/uFVAqHZhcUL+mEjVgEaMGu/fbwY8S91uiJvjnY=">
         
 		
 			<script language="JavaScript">
@@ -131,10 +132,18 @@ location = '/logon.aspx?nextpage=' + encodeURIComponent(location.pathname);
 <a href="/Test_Prep/_default.aspx">Test Prep</a>&nbsp;| 
 <a href="/Applications___Transcripts/_default.aspx">Applications &amp; Transcripts</a>&nbsp;| 
 <a href="/MyInfo/Introduction.aspx">MyInfo</a><p></p>
-<p><a title="Opens in new window" href="http://www.okhighered.org/" target="_blank"><img alt="Oklahoma Higher Education" src="/images/Oklahoma/OSRHE_logo.gif" border="0" width="151" height="101"></a> <a title="Opens in new window" href="http://www.xap.com/" target="_blank"><img alt="Powered by Xap" src="/images/Oklahoma/XAP_logo.gif" border="0" height="100" width="100"></a></p>
+<p><a title="Opens in new window" href="http://www.okhighered.org/" target="_blank"><img alt="Oklahoma Higher Education" src="/images/Oklahoma/OSRHE_logo.gif" border="0" height="101" width="151"></a> <a title="Opens in new window" href="http://www.xap.com/" target="_blank"><img alt="Powered by Xap" src="/images/Oklahoma/XAP_logo.gif" border="0" height="100" width="100"></a></p>
 <div id="copyright">Copyright © <a title="Opens in new window" href="http://www.xap.com" target="_blank">Xap Corporation</a>. All Rights Reserved. XAP and MENTOR are registered trademarks of XAP Corporation. Reg. U.S. Pat. &amp; TM Off. <br>Use of this website constitutes acceptance of the XAP <a href="/terms_of_use.aspx">Terms of Use</a> and <a href="/privacy_policy.aspx">Privacy Policy</a>.</div></div>
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+try {
+var pageTracker = _gat._getTracker("UA-3624566-35");
+pageTracker._trackPageview();
+} catch(err) {}</script>
 		
-<input type="hidden" name="__EVENTVALIDATION" id="__EVENTVALIDATION" value="/wEWAwL61ObSBgK3/uFVAqHZhcULOOVcp4s3OWz5CBn9ItOoBEkimmc=">
 
 <script type="text/javascript">
 //<![CDATA[
