rainkingonline.com (archived on 2009-06-12)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 4931,
  "classifier_probability": 0.91,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.37,
  "homepage_snapshot_redirected_domain": "rainkingonline.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090302094901id_/http://rainkingonline.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090302094901id_/http%3A//rainkingonline.com",
  "interval": "2009_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "rainkingonline.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090612211231id_/http%3A//rainkingonline.com/PrivacyPolicy.cfm",
  "policy_title": "RainKing - Privacy Policy",
  "policy_url": "rainkingonline.com/PrivacyPolicy.cfm",
  "sha1": "dd11ff2c5e6b98a1b84fa572b985fc55dee73551",
  "simhash": 12362653260859084374,
  "simhash_updated": false,
  "site_hostname": "rainkingonline.com",
  "site_url": "http://rainkingonline.com",
  "smog": 14.65,
  "strict_updated": false,
  "timestamp": "20090612211231",
  "word_count": 797,
  "year": 2009
}

--- a/r/ra/rai/rainkingonline.com.html
+++ b/r/ra/rai/rainkingonline.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the rainkingonline.com privacy policy that was archived on 2008-11-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081121002648id_/http%3A//www.rainkingonline.com/PrivacyPolicy.cfm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the rainkingonline.com privacy policy that was archived on 2009-06-12.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090612211231id_/http%3A//rainkingonline.com/PrivacyPolicy.cfm) for the most accurate reproduction.-->
 
 <html><head><script type="text/javascript">_cf_loadingtexthtml="<img alt=' ' src='/CFIDE/scripts/ajax/resources/cf/images/loading.gif'/>";
 _cf_contextpath="";
@@ -27,6 +27,9 @@ _cf_jsonprefix='//';
 <title>RainKing - Privacy Policy</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <link rel="stylesheet" type="text/css" href="homePageStyles.css">
+<script language="javascript" type="text/javascript" src="RainKingHTML/AJAX.js"></script>
+
+
 
 <script type="text/javascript">
 	ColdFusion.Ajax.importTag('CFAJAXPROXY');
@@ -42,7 +45,6 @@ _cf_jsonprefix='//';
 </head>
 <body style="background: #ffffff" id="ext-gen2" class=" ext-safari ext-linux"><span></span>
 
-<script language="javascript" type="text/javascript" src="RainKingHTML/AJAX.js"></script>
 
 <div id="pageHeader">
 	<div id="divTopMenu">
@@ -220,7 +222,7 @@ _cf_jsonprefix='//';
 	<tr>
 		<td style="background: #ffffff; text-align: center; font-size: 8pt;padding-bottom: 8px; vertical-align: bottom">
 			
-			© 2008 Rain King Software, Inc.  All rights reserved.<br><br>
+			© 2009 Rain King Software, Inc.  All rights reserved.<br><br>
 			<a href="TermsOfUse.cfm">Terms of Use</a>&nbsp;&nbsp;|&nbsp; 
 			<a href="PrivacyPolicy.cfm">Privacy Policy</a>
 		</td>
