--- a/t/td/tdn/tdn.com.html
+++ b/t/td/tdn/tdn.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the tdn.com privacy policy that was archived on 2008-11-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081127225802id_/http%3A//www.tdn.com/info/policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the tdn.com privacy policy that was archived on 2009-06-12.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090612224519id_/http%3A//www.tdn.com/info/policy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -7,10 +7,10 @@
 </head>
 
 <body>
-<script type="text/javascript" src="http://www.tdn.com/shared-content/stats/common/tracker.js"></script>
+<script type="text/javascript" src="http://stats.townnews.com/shared-content/stats/common/tracker.js"></script>
 <script type="text/javascript">
 <!--
- if(typeof(TNStats_Tracker) !== 'undefined' && typeof(TNTracker) === 'undefined') { TNTracker = new TNStats_Tracker('tdn.com'); TNTracker.setTracker('http://www.tdn.com/shared-content/stats/common/tracker.gif', 'https://secure.townnews.com/shared-content/stats/common/tracker.gif'); TNTracker.trackPageView(); }
+ if(typeof(TNStats_Tracker) !== 'undefined' && typeof(TNTracker) === 'undefined') { TNTracker = new TNStats_Tracker('tdn.com'); TNTracker.setTrackerDomain('stats.townnews.com'); TNTracker.trackPageView(); }
 // -->
 </script>
 <style type="text/css">
