--- a/g/ge/get/getdata.com.html
+++ b/g/ge/get/getdata.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the getdata.com privacy policy that was archived on 2008-12-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081218014616id_/http%3A//www.getdata.com/about/getdata-privacy-policy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the getdata.com privacy policy that was archived on 2009-06-13.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090613030824id_/http%3A//www.getdata.com/about/getdata-privacy-policy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -126,7 +126,8 @@
 | <a class="grey" href="/about/">About Us</a>
 | <a class="grey" href="/media/">News &amp; Media</a>
 | <a class="grey" href="https://secure.getdata.com/my/">Member Login</a> 
-| <a class="grey" href="/sitemap.php">Sitemap</a></p>
+| <a class="grey" href="/sitemap.php">Sitemap</a>
+| <a href="http://www.cafepress.com/GetData" target="_blank" class="grey">Merchandise</a></p>
 <p>Copyright © GetData 2008 All Rights Reserved</p>
 <p><a href="/about/getdata-privacy-policy.php">Privacy Policy</a>
 | <a href="/getdata-recovery-software-user-agreement.php">User Agreement</a>
