yuppads.com (archived on 2009-06-13)
{
  "alexa_rank": 186098,
  "analysis_subcorpus": true,
  "categories": "uncategorized",
  "char_count": 6648,
  "classifier_probability": 0.91,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.32,
  "homepage_snapshot_redirected_domain": "yuppads.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090216222029id_/http://yuppads.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090216222029id_/http%3A//yuppads.com",
  "interval": "2009_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "yuppads.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090613040117id_/http%3A//yuppads.com/PrivacyPolicy.aspx",
  "policy_title": "Yuppads.com-Privacy Policy",
  "policy_url": "yuppads.com/PrivacyPolicy.aspx",
  "sha1": "ef2be4d8467034d2dc5e2baeac5abe99c251e84f",
  "simhash": 4483362596288112823,
  "simhash_updated": false,
  "site_hostname": "yuppads.com",
  "site_url": "http://yuppads.com",
  "smog": 15.2,
  "strict_updated": false,
  "timestamp": "20090613040117",
  "word_count": 1085,
  "year": 2009
}

--- a/y/yu/yup/yuppads.com.html
+++ b/y/yu/yup/yuppads.com.html
@@ -1,23 +1,23 @@
-<!--The following is the downloaded HTML source of the yuppads.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216152708id_/http%3A//www.yuppads.com/PrivacyPolicy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the yuppads.com privacy policy that was archived on 2009-06-13.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090613040117id_/http%3A//yuppads.com/PrivacyPolicy.aspx) for the most accurate reproduction.-->
 
 <html xmlns="http://www.w3.org/1999/xhtml"><head><title>
-	Yuppads.com - A Complete Affiliate Network | Affiliate Marketing | Online Advertising Network | Affiliate network | Publisher Network
-</title><meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"><meta name="description" content="Yuppads the only fast growing next generation for affiliate marketing, affiliate network and Online Advertising. Yuppads Affiliate Network is leader in performance based web marketing by offering CPA, CPM, CPC and PPV (Pay per View) Video ads."><meta name="keywords" content="Affiliate marketing, online advertising network, affiliate network, affiliate program, Publisher Network, Online Advertising, Advertiser Network, Affiliate Internet Marketing"><meta name="robots" content="all, index, follow"><meta name="revisit-after" content="7 days"><meta name="Subject" content="Complete affiliate network and online advertising network"><link href="App_Themes/yuppAds/Images/logos/imageslider.css" type="text/css" rel="stylesheet"><link href="App_Themes/yuppAds/StyleSheet.css" type="text/css" rel="stylesheet"></head>
+	Yuppads.com-Privacy Policy
+</title><meta name="revisit-after" content="5 days"><meta name="robots" content="all, index, follow"><link href="App_Themes/yuppAds/Images/logos/imageslider.css" type="text/css" rel="stylesheet"><link href="App_Themes/yuppAds/StyleSheet.css" type="text/css" rel="stylesheet"></head>
 <body class="Body">
 
-    <form name="aspnetForm" method="post" action="PrivacyPolicy.aspx" id="aspnetForm">
-<input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwULLTEwMDUyNjYzMjhkZEYceVMHHtu88GLdseMVd8qPkbWg">
+    <form name="form1" method="post" action="PrivacyPolicy.aspx" id="form1">
+<input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwULLTE5OTAzNjE3NjZkZNaivwg8SdmsDuJUbP8I3FdAJtgr">
 
-    <div align="center">
+	<div align="center">
 
 
 <table width="778" border="0" align="center" cellpadding="0" cellspacing="0">
   <tbody><tr>
-    <td style="height:66px; background-color:#f0f0f0">
-	<div style="float:left; width:174px; height:76px; text-align:left"><a href="#">
-	<img src="App_Themes/yuppAds/Images/YuppAds_logo.gif" alt="YuppAds" width="174" height="76" border="0"></a></div>
-		<div style="float:right; width:604px; height:76px; background:url(App_Themes/yuppAds/Images/topRight.gif) top right no-repeat"></div>	
+    <td style="height:66px; background-color:#fff">
+	 <div style="float:left; width:174px; height:76px; text-align:left"><a href="http://www.yuppads.com/">
+	<img src="App_Themes/yuppAds/Images/YuppAds_logo.gif" alt="Advertising Network" width="174" height="76" border="0"></a></div>
+		<div style="float:right; width:604px; height:76px; background:url(App_Themes/yuppAds/Images/topRight.gif) top right no-repeat"></div>
 		</td>
   </tr>
   
@@ -32,12 +32,12 @@
 
   <div id="navCont">
     <ul>
-		<li><a href="ClientLogin.aspx" class="nag">Login</a></li>
-      <li><a href="ContactUs.aspx" class="nag">Contact Us</a></li>
-      <li><a href="Publisher.aspx" class="nag">Affiliates</a></li>
-	  <li><a href="Advertiser.aspx" class="nag">Advertisers</a></li>
-	  <li><a href="AboutUs.aspx" class="nag">About Us</a></li>
-	   <li><a href="Default.aspx" class="nag">Home</a></li>
+		<li><a href="http://www.yuppads.com/ClientLogin.aspx" class="nag" title="Login">Login</a></li>
+      <li><a href="http://www.yuppads.com/ContactUs.aspx" class="nag" title="Contact Us">Contact Us</a></li>
+      <li><a href="http://www.yuppads.com/Publisher.aspx" class="nag" title="Affiliates">Affiliates</a></li>
+	  <li><a href="http://www.yuppads.com/Advertiser.aspx" class="nag" title="Advertisers">Advertisers</a></li>
+	  <li><a href="http://www.yuppads.com/AboutUs.aspx" class="nag" title="About Us">About Us</a></li>
+	   <li><a href="http://www.yuppads.com" class="nag" title="Online Advertising Network">Home</a></li>
     </ul>
   </div>
 </div>		</td>
@@ -47,8 +47,8 @@
   </tr>
   <tr><td style="height:10px"></td></tr>
 </tbody></table>
-<div style="width: 740px; background-color:White;">
-	
+<div style="width: 778px; background-color:White;">
+
 <table border="0" width="778" cellspacing="0" cellpadding="0">
 
 <tbody><tr><td>
@@ -103,9 +103,7 @@ Georgia<br>
     <td height:10px"=""></td>
   </tr>
 </tbody></table>
- <br>
-
-    
+<br><br>
 </div>
  
 
@@ -114,7 +112,7 @@ Georgia<br>
       <tbody><tr>
         <td style="background-image:url(App_Themes/yuppAds/Images/fl.gif); width:7px"></td>
         <td align="center" id="foot"><br> 
-          <a href="http://www.yuppads.com">Home</a> | <a href="AboutUs.aspx">About Us</a> | <a href="Advertiser.aspx">Advertisers</a> | <a href="Publisher.aspx">Publishers</a> | <a href="Solutions.aspx">Solutions</a> | <a href="ContactUs.aspx">Contact Us</a> | <a href="PrivacyPolicy.aspx">Privacy Policy</a> | <a href="TermsOfUse.aspx">Terms &amp; Conditions</a><br>
+          <a href="http://www.yuppads.com">Home</a> | <a href="AboutUs.aspx">About Us</a> | <a href="Advertiser.aspx">Advertisers</a> | <a href="Publisher.aspx">Publishers</a> | <a href="Solutions.aspx">Solutions</a> | <a href="ContactUs.aspx">Contact Us</a> | <a href="PrivacyPolicy.aspx">Privacy Policy</a> | <a href="TermsOfUse.aspx">Terms &amp; Conditions</a> | <a href="Sitemap.aspx">Sitemap</a><br>
           © 2008 YuppAds., a division of GlobalTakeoff Inc, All Rights Reserved. </td>
         <td style="background-image:url(App_Themes/yuppAds/Images/fr.gif); width:7px"></td>
       </tr>
@@ -130,6 +128,7 @@ pageTracker._trackPageview();
 </script>
 
  </div>
-    </form>
+  </form>
+
 
 </body></html>
